--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -865,6 +865,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4ea93e3f",
+   "metadata": {},
+   "source": [
+    "## **Data Splitting**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 22,
    "id": "f9827436",
